# Provenly-app

./: .gitignore  CONTRIBUTING.md  README.md
FrontEnd/: Readme.md
FrontEnd/my-app/: tailwind.config.js
SmartContract/: API_DOCUMENTATION.md  CHANGELOG.md  CROSS_CONTRACT_QUICK_REFERENCE.md  CROSS_CONTRACT_TESTING.md  MIGRATION_GUIDE.md  MIGRATION_QUICK_REFERENCE.md  MIGRATION_TESTING.md  README.md  SLA_SLO.md  setup-local-env.sh  test_output.txt  verify-local-env.sh
SmartContract/audit/: AUDIT_CHECKLIST.md  AUDIT_SPEC.md  IMPLEMENTATION_SUMMARY.md  INVARIANTS.md  MANIFEST.md  README.md  SECURITY.md  THREAT_MODEL.md
SmartContract/bindings/: index.ts  package.json
SmartContract/docs/: BACKWARD_COMPATIBILITY_POLICY.md  CHANGELOG_DISCIPLINE.md  CONTRACT_ROADMAP.md  EVENT_SPECIFICATION.md  LOCAL_TOOLCHAIN_SETUP.md  RUSTDOC_STANDARDS.md  STORAGE_LAYOUT.md
SmartContract/examples/: indexer-example.ts
SmartContract/fuzz/: Cargo.toml  README.md
SmartContract/fuzz/blunt_targets/: batch_approval_fuzzer.rs  batch_registration_fuzzer.rs  input_decoding_fuzzer.rs  quest_creation_fuzzer.rs  state_transitions_fuzzer.rs  submission_fuzzer.rs  validation_fuzzer.rs
SmartContract/src/: errors.rs  gas_budget.rs  lib.rs  stats.rs  test_arbitrator.rs  test_clawback.rs  test_stats.rs  test_thresholds.rs  test_token.rs  token.rs  types.rs
SmartContract/tests/: gas_benchmarks.rs  property_tests.rs  test_admin.rs  test_batch.rs  test_batch.rs.disabled  test_bounds_checking.rs  test_creator_level.rs  test_cross_contract.rs  test_data_structures.rs  test_dispute.rs  test_escrow.rs  (+19 more)
(+8 files in other folders)
