[package]
name = "earn-quest-fuzz"
version = "0.1.0"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "=1.3.2", features = ["derive"] }
soroban-sdk = { version = "21.7.4", features = ["testutils"] }

[dependencies.earn_quest]
path = ".."

[[bin]]
name = "quest_creation_fuzzer"
path = "blunt_targets/quest_creation_fuzzer.rs"
test = false
doc = false

[[bin]]
name = "submission_fuzzer"
path = "blunt_targets/submission_fuzzer.rs"
test = false
doc = false

[[bin]]
name = "validation_fuzzer"
path = "blunt_targets/validation_fuzzer.rs"
test = false
doc = false

[[bin]]
name = "input_decoding_fuzzer"
path = "blunt_targets/input_decoding_fuzzer.rs"
test = false
doc = false

[[bin]]
name = "state_transitions_fuzzer"
path = "blunt_targets/state_transitions_fuzzer.rs"
test = false
doc = false

[[bin]]
name = "batch_registration_fuzzer"
path = "blunt_targets/batch_registration_fuzzer.rs"
test = false
doc = false

[[bin]]
name = "batch_approval_blunt"
path = "blunt_targets/batch_approval_blunt.rs"
test = false
doc = false
